# HighlyAdaptiveRidge

./: .gitignore  HAR.ipynb  HAR_Paper.md  LICENSE  My_HAL_sims.ipynb  Pipfile  README.md  README_NEW.md  data_generator.py  data_generators.py  find_best_kernel.ipynb  hal_full.py  hal_unknown.py  highly_adaptive_lasso.py  highly_adaptive_ridge.py  kernel_HAR_NB.ipynb  kernel_har.py  keyfile  keyfile.pub  pyproject.toml  requirements.txt  run_trials.py  simulation_1.0.py  testbench_nb.ipynb  train_time_plotter.py
.github/workflows/: ci.yml
.refactor/: AGENT_PROMPT.md  REFACTOR.md  phase-1-triage.md  phase-2-implementations.md  phase-3-experiments.md  phase-4-polish.md
Training_df_files/: dataframe_d1_dgp_Smooth.pickle  dataframe_d3_dgp_Sinusoidal.pickle  dataframe_d5_dgp_Jump.pickle  dataframe_d5_dgp_Smooth.pickle
_archive/: Pipfile  kernel_functions.py
_archive/df_pickles/: dataframe_d1_dgp_Jump.pickle  dataframe_d3_dgp_Smooth.pickle
csv/: boston.csv  naval.csv
data/: kin8nm.csv  protein.csv  yacht.csv
df_pickles/: all_file_names.pickle  dataframe_d1_dgp_Sinusoidal.pickle  dataframe_d3_dgp_Jump.pickle  dataframe_d5_dgp_Sinusoidal.pickle  large_n_df1_Jump_dgp.pickle  large_n_df1_Smooth_dgp.pickle  models_compare_table.pickle
experiments/: plot_results.py  run_benchmarks.py  run_simulations.py
har/: __init__.py  data_generators.py  hal.py  kernel_har.py
notebooks/: khar_workbench.ipynb  testbench_nb.ipynb
tests/: test_data_generators.py  test_hal.py  test_kernel_har.py
