[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "har"
version = "0.1.0"
description = "Highly Adaptive Ridge: nonparametric regression with dimension-free convergence rates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alejandro Schuler" },
    { name = "Alexander Hagemeister" },
    { name = "Mark van der Laan" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["har*"]
